Fix affix, fix white space - download

--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,7 @@ h2{
   background-color: transparent;
   padding-left: 0;
 }
-ul.affix li a{
+ul.affix li a, ul.affix-top li a{
   padding-top: 5px;
   padding-bottom: 5px;
 }
